fixed rows not coloring with Collapse tag under each row

--- a/src/components/Quotetable.css
+++ b/src/components/Quotetable.css
@@ -3,6 +3,10 @@
     margin: 60px;
 }
 
+.row-header {
+    font-weight: bold;
+}
+
 .row {
     display: flex;
 
@@ -10,15 +14,16 @@
 
 .row > div {
     flex: 1;
+    padding: 10px;
 }
 
-/* .row-data:nth-child(even) {
-    background-color: rgb(185, 184, 184);
+.oddRow {
+    background-color: rgb(245, 245, 245);
 }
 
-.row-data:nth-child(odd) {
-    background-color: rgb(207, 207, 207);
-} */
+.evenRow {
+    background-color: rgb(238, 238, 238);
+}
 
 
 .header-button {
